# CppLab

./: .gitignore  README.md  commit.sh
clabs/: __VA_ARGS__.c  big_endian_little_endian.c  strerror.c
clabs/assert/: static_assert.c
clabs/standard_library_test/: build.sh
clabs/standard_library_test/string/: strcpy_strncpy.c
clabs/stdlib/: qsort.c
clabs/time/: strftime.c
cpplabs/atomic/: atomic.cpp
cpplabs/c11/: Makefile  auto_decltype.cpp  constexpr.cpp  regex.cpp  tie.cpp
cpplabs/c17/: Makefile
cpplabs/chrono/: system_clock.cpp  time_point.cpp
cpplabs/memory/: cyclic_reference.cpp  shared_ptr.cpp  static_pointer_cast.cpp  unique_ptr.cpp
cpplabs/stl_container/: array.cpp  map.cpp  vector.cpp
cpplabs/stream/: getline.cpp  istringstream.cpp
cpplabs/string/: Makefile  stoi_stol_stoul_stof.cpp  string-construct.cpp  string-erase.cpp  string-substr.cpp
cpplabs/template/: universal_ref_perfect_forwarding.cpp  variadic_template.cpp
cpplabs/thread/: async2.cpp  build.sh  mutex.cpp  simple_thread.cpp  unique_lock.cpp
cpplabs/topics/: placement_new.cpp
cpplabs/topics/RTTI/: typeid_typeinfo.cpp
cpplabs/type_traits/: is_trivial.cpp  type_traits.cpp
cpplabs/utility/: pair.cpp
external_lab/cmake/: README.md
external_lab/cmake/programs/hello_cmake/: main.cpp
external_lab/cmake/programs/lab_library_test/: main.cpp
external_lab/cmake/programs/rand/: CMakeLists.txt  RandFuncs.h
external_lab/fastdb/: CMakeLists.txt
external_lab/fastdb/src/: main.cpp
external_lab/googletest/: README.md  main.cpp
external_lab/my_collection/: CMakeLists.txt
external_lab/precompileheader/: README.md
external_lab/precompileheader/TestForGCC/: Makefile_no_precompileheader
external_lab/protobuf/: Makefile  README.md  hello.proto  reader.cpp  writer.cpp
external_lab/unity/: main.c
lab_ccache/: bar2.cpp
lab_cmake/: CMakeLists.txt  NOTE.md  README.md  gen_proj_linux.sh
lab_cmake/programs/hello_cmake/: CMakeLists.txt
lab_cmake/programs/lab_library_test/: CMakeLists.txt  main.cpp
lab_cmake/programs/rand/: CMakeLists.txt  RandFuncs.cpp  main.cpp
lab_cmake/proj_linux/: gen.sh
lab_cmake/proj_win32/: gen.bat
lab_fastdb/: CMakeLists.txt
lab_fastdb/src/: main.cpp
lab_iconv/: NOTE.md  test_iconv.c  test_iconv.sln  test_iconv.vcproj
lab_iconv/test_iconv_vs2015/: test_iconv_vs2015.vcxproj
lab_list/: README.md  lab_list.sln
lab_list/lab_list/: lab_list.vcxproj  lab_list.vcxproj.filters
lab_list/src/: main.cpp
lab_mysqlutility/: CMakeLists.txt  README.md
lab_mysqlutility/mysqlconnector/v32/include/: config-win.h
lab_mysqlutility/src/: CMakeLists.txt  main.cpp  mysqlutility.hpp
lab_precompileheader/TestForGCC/: Makefile
lab_protobuf/: README.md  hello.proto  writer.cpp
lab_rapidxml/: NOTE.md  lab_rapidxml.sln
lab_rapidxml/lab_rapidxml/: lab_rapidxml.vcxproj  lab_rapidxml.vcxproj.filters  test_rapidxml.cpp  test_save.xml
lab_rapidxml/lab_rapidxml/XmlReader/: XmlReader.cpp  XmlReader.h  XmlReader_Test.cpp
my_collection_lab/: SmallFuncs.cpp  SmallFuncs.h  main.cpp  str_bkdr.hpp
my_collection_lab/NameFilter/: name.txt
my_collection_lab/TraceBack/: TraceBack.h
my_template_lab/test/: CMakeLists.txt  Makefile  build-libgtest.sh  main.cpp  test_Array.cpp  test_BenchMark.cpp  test_FixLenHashTable.cpp  test_FixLenRankList.cpp  test_FixLenSet.cpp  test_FixLenStr.cpp  test_FormattedTable.cpp  test_ObjFuncInvoker.cpp  test_ObjTimer.cpp  test_TimeUtil.cpp  test_funcs.cpp  test_misc.cpp  test_timeutil.cpp
my_template_lab/test/src/: test_Array.cpp  test_BenchMark.cpp  test_FixLenArray.cpp  test_FixLenHashTable.cpp  test_FixLenRankList.cpp  test_FixLenSet.cpp  test_FixLenStr.cpp  test_FormattedTable.cpp  test_ObjFuncInvoker.cpp  test_TimeUtil.cpp  test_misc.cpp
