cmake_minimum_required(VERSION 2.8)

PROJECT(LAB)

if (CMAKE_COMPILER_IS_GNUCXX)
	SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g3 -Wall -D_DEBUG -std=c++11")
	SET(CMAKE_CXX_FLAGS_RELEASE "-O0 -g -Wall -std=c++11")
endif(CMAKE_COMPILER_IS_GNUCXX)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

ADD_SUBDIRECTORY(programs/hello_cmake)