INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/mysqlconnector/v32/include)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/mysqlconnector/v32/lib)

FILE(GLOB_RECURSE SRC_FILES "./*.cpp" "./*.h*")
source_group(src FILES ${SRC_FILES})

ADD_EXECUTABLE(lab_mysqlutility ${SRC_FILES})
TARGET_LINK_LIBRARIES(lab_mysqlutility ${LINK_LIB_COMMON})